--- a/contactenos.html
+++ b/contactenos.html
@@ -25,7 +25,7 @@
 
       <div class="info-contacto">
         <h2>Información de contacto</h2>
-        <p><strong>Nombre:</strong> Luis Dario Mercado Aparaya</p>
+        <p><strong>Nombre:</strong> Luis Dario Mercado Aparaya y David Rodrigo Delgado Rojas </p>
         <p><strong>Correo electrónico:</strong> luismercado1214@gmail.com</p>
         <p><strong>Teléfono:</strong> +591 78005754</p>
         <p><strong>Horario de atención:</strong> Lunes a viernes, 8:00 am - 6:00 pm</p>
@@ -64,3 +64,4 @@
   </footer>
 </body>
 </html>
+
